--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>My Web Page!</title>
 </head>
+<h2>My first webpage!</h2>
 <body>
 <p>Once upon a time a girl named Syd was brought to <i>tears</i> trying to figure out how to work a <b>website</b></p>
 </html>
