--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <h2>My first webpage!</h2>
 <body>
-<p>Once upon a time a girl named <input type="Syd" size=15" /> was brought to <i>tears</i> trying to figure out how to work a <b>website</b></p>
+<p>Once upon a time a girl named <input type="Syd" size="15" /> was brought to <i>tears</i> trying to figure out how to work a <b>website</b></p>
 </html>
+
